# av-speech-in-noise

./: .clang-format  .gitignore  CMakeLists.txt  MacOSXBundleInfo.plist.in  README.md  notarize-and-staple.sh
apps/: AvFoundationPlayers.h  AvFoundationPlayers.mm  CMakeLists.txt  CocoaView.h  CocoaView.hh  CocoaView.mm  MersenneTwisterRandomizer.hpp  TobiiEyeTracker.cpp  TobiiEyeTracker.hpp  common-objc.h  main.mm
av-speech-in-noise/: CMakeLists.txt
av-speech-in-noise/adaptive-track/: CMakeLists.txt
av-speech-in-noise/adaptive-track/src/: AdaptiveTrack.cpp
av-speech-in-noise/apps/: AvFoundationPlayers.h  AvFoundationPlayers.mm  CMakeLists.txt  CocoaView.h  CocoaView.mm  MersenneTwisterRandomizer.h  main.mm
av-speech-in-noise/av-speech-in-noise/: CMakeLists.txt
av-speech-in-noise/presentation/: CMakeLists.txt
av-speech-in-noise/presentation/src/: Presenter.cpp  TestSettingsInterpreter.cpp
av-speech-in-noise/recognition-test/: CMakeLists.txt
av-speech-in-noise/stimulus-players/: CMakeLists.txt
av-speech-in-noise/target-list/: CMakeLists.txt
av-speech-in-noise/tests/: AdaptiveMethodTests.cpp  AdaptiveTrackTests.cpp  AudioReaderStub.h  CMakeLists.txt  DirectoryReaderStub.h  FixedLevelMethodTests.cpp  MaskerPlayerTests.cpp  ModelEventListenerStub.h  OutputFileStub.h  OutputFileTests.cpp  PresenterTests.cpp  PresenterTests.h  RecognitionTestModelTests.cpp  RecognitionTestModel_InternalTests.cpp  ResponseEvaluatorTests.cpp  TargetListStub.h  TargetListTests.cpp  TestConcluderStub.h  TrackStub.h
lib/: CMakeLists.txt
lib/adaptive-track/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/domain/: CMakeLists.txt
lib/player/: CMakeLists.txt
lib/playlist/: CMakeLists.txt
lib/presentation/: CMakeLists.txt
lib/stimulus-players/: CMakeLists.txt
lib/ui/: CMakeLists.txt
macos/: AppKit-utility.h  AppKit-utility.mm  AppKitTestSetupUIFactory.h  AppKitView.h  AppKitView.mm  AvFoundationPlayers.h  AvFoundationPlayers.mm  CMakeLists.txt  CocoaView.h  CocoaView.mm  EyeTrackerStub.hpp  FacemaskStudySetupView.h  FacemaskStudySetupView.mm  Foundation-utility.h  Foundation-utility.mm  HelloWorldObjc.h  HelloWorldObjc.mm  MacOsTestSetupViewFactory.h  MersenneTwisterRandomizer.hpp  SwiftUI.swift  Timer.h  Timer.mm  TobiiProEyeTracker.cpp  TobiiProEyeTracker.hpp  common-objc.h  hi.swift  main-facemask-study-view-preview.mm  main-facemask-study.mm  main-no-eyetracking.mm  main-tobii.mm  main.h  main.mm  masking-images.h  masking-images.m  masking-images.mm  objective-c-adapters.h  objective-c-adapters.mm  objective-c-bridge.h  run.h  run.mm  (+1 more)
macos-main/: AvFoundationPlayers.h  AvFoundationPlayers.mm  CMakeLists.txt  CocoaView.h  CocoaView.mm  MersenneTwisterRandomizer.hpp  TobiiEyeTracker.cpp  TobiiEyeTracker.hpp  common-objc.h  main-tobii.mm  main.mm
macos/main/: default.mm  default.swift  facemask-study.mm  facemask-study.swift  no-eyetracking.mm  with-tobii.mm  with-tobii.swift
src/presentation/: CMakeLists.txt  Model.h  Presenter.cpp  Presenter.h
src/recognition-test/: AdaptiveMethod.cpp  AdaptiveMethod.hpp  AdaptiveTrack.cpp  AdaptiveTrack.hpp  CMakeLists.txt  FixedLevelMethod.hpp  Model.cpp  Model.hpp  MultiTrack.cpp  MultiTrack.hpp  MultiTrackTargetList.cpp  MultiTrackTargetList.hpp  OutputFileImpl.cpp  OutputFileImpl.hpp  OutputFilePathImpl.cpp  OutputFilePathImpl.hpp  RecognitionTestModel.cpp  RecognitionTestModel.hpp  RecognitionTestModel_Internal.cpp  RecognitionTestModel_Internal.hpp  ResponseEvaluatorImpl.cpp  ResponseEvaluatorImpl.hpp  SubdirectoryTargetListReader.cpp  SubdirectoryTargetListReader.hpp  TrackSettingsInterpreter.cpp  TrackSettingsInterpreter.hpp  TrackSettingsReader.cpp  TrackSettingsReader.hpp
src/stimulus-players/: AudioReader.cpp  AudioReader.h  AudioReader.hpp  AudioReaderImpl.cpp  AudioReaderImpl.hpp  CMakeLists.txt  MaskerPlayerImpl.cpp  MaskerPlayerImpl.hpp  TargetPlayerImpl.cpp  TargetPlayerImpl.hpp
src/target-list/: CMakeLists.txt  FileExtensionFilterDecorator.cpp  FileExtensionFilterDecorator.hpp  FileFilterDecorator.cpp  FileFilterDecorator.hpp  RandomizedTargetList.cpp  RandomizedTargetList.hpp  SubdirectoryTargetListReader.cpp  SubdirectoryTargetListReader.hpp
src/target-playlists/: CMakeLists.txt
test/: AdaptiveMethod.cpp  AdaptiveMethodStub.hpp  AdaptiveMethodTests.cpp  AdaptiveTrack.cpp  AdaptiveTrackFactory.cpp  AdaptiveTrackTests.cpp  AudioReader.cpp  AudioReaderSimplified.cpp  AudioReaderStub.hpp  AudioReaderTests.cpp  AudioRecorderStub.hpp  AudioRecording.cpp  CMakeLists.txt  CannotReadDirectory.hpp  ChooseKeywords.cpp  ConfigurationRegistryStub.hpp  Consonant.cpp  CoordinateResponseMeasure.cpp  CorrectKeywords.cpp  DirectoryReaderStub.hpp  Emotion.cpp  Experimenter.cpp  ExperimenterControllerStub.hpp  ExperimenterResponderStub.hpp  EyeTrackerCalibrationController.cpp  EyeTrackerCalibrationInteractor.cpp  EyeTrackerCalibrationPresenter.cpp  EyeTrackerCalibrationSerialization.cpp  EyeTrackerStub.hpp  EyeTracking.cpp  FilterAdapter.cpp  FixedLevelMethod.cpp  FixedLevelMethodStub.hpp  FixedLevelMethodTests.cpp  FixedPassFail.cpp  FreeResponse.cpp  KeyPress.cpp  LevittTrack.cpp  LogString.h  LogString.hpp  (+76 more)
tests/: AdaptiveMethodTests.cpp  AdaptiveTrackTests.cpp  AudioReaderStub.h  AudioReaderTests.cpp  CMakeLists.txt  DirectoryReaderStub.h  FixedLevelMethodTests.cpp  LogString.h  MaskerPlayerStub.h  MaskerPlayerStub.hpp  MaskerPlayerTests.cpp  ModelEventListenerStub.h  ModelStub.hpp  ModelTests.cpp  OutputFilePathTests.cpp  OutputFileStub.h  OutputFileStub.hpp  OutputFileTests.cpp  PresenterTests.cpp  PresenterTests.h  PresenterTests.hpp  RandomizedTargetListTests.cpp  RandomizerStub.h  RandomizerStub.hpp  RecognitionTestModelTests.cpp  RecognitionTestModel_InternalTests.cpp  RecognitionTestModel_Tests.cpp  ResponseEvaluatorStub.h  ResponseEvaluatorStub.hpp  ResponseEvaluatorTests.cpp  SubdirectoryTargetListReaderTests.cpp  TargetListSetReaderStub.h  TargetListSetReaderStub.hpp  TargetListStub.h  TargetListStub.hpp  TargetListTests.cpp  TargetPlayerStub.h  TargetPlayerStub.hpp  TargetPlayerTests.cpp  TestConcluderStub.h  (+7 more)
(+405 files in other folders)
