add_executable(
  av-speech-in-noise-test-exe
  AdaptiveMethod.cpp
  AdaptiveTrack.cpp
  AudioReaderSimplified.cpp
  FixedLevelMethod.cpp
  MaskerPlayer.cpp
  OutputFilePath.cpp
  OutputFile.cpp
  RunningATest.cpp
  Model.cpp
  ResponseEvaluator.cpp
  SubdirectoryTargetListReader.cpp
  RandomizedTargetPlaylists.cpp
  TargetPlayer.cpp
  TestSettingsInterpreter.cpp
  Consonant.cpp
  Emotion.cpp
  CoordinateResponseMeasure.cpp
  CorrectKeywords.cpp
  FreeResponse.cpp
  KeyPress.cpp
  PassFail.cpp
  FixedPassFail.cpp
  Test.cpp
  TestSetup.cpp
  SessionController.cpp
  ChooseKeywords.cpp
  SentencesWithThreeKeywords.cpp
  Syllables.cpp
  EyeTrackerCalibrationPresenter.cpp
  EyeTrackerCalibrationInteractor.cpp
  EyeTrackerCalibrationController.cpp
  Subject.cpp
  PredeterminedTargetPlaylist.cpp
  AudioRecording.cpp
  EyeTracking.cpp
  RevealImage.cpp
  EyeTrackerCalibrationSerialization.cpp
  UpdatedMaximumLikelihood.cpp)
target_compile_features(av-speech-in-noise-test-exe PRIVATE cxx_std_17)
set_target_properties(av-speech-in-noise-test-exe PROPERTIES CXX_EXTENSIONS OFF)
target_compile_options(av-speech-in-noise-test-exe
                       PRIVATE ${AV_SPEECH_IN_NOISE_WARNINGS})
target_link_libraries(
  av-speech-in-noise-test-exe
  av-speech-in-noise-core-lib
  av-speech-in-noise-ui-lib
  av-speech-in-noise-player-lib
  av-speech-in-noise-playlist-lib
  gtest_main
  GSL)
add_test(NAME av-speech-in-noise-test-exe COMMAND av-speech-in-noise-test-exe)
